--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,15 @@ targetCompatibility = 1.8
 
 dependencies {
 
+    compile('org.jsoup:jsoup:1.11.3')
+
+    compile('commons-logging:commons-logging')
+
     compile('org.apache.commons:commons-lang3')
 
     compile('org.apache.httpcomponents:httpclient')
 
+    compile group: 'net.sourceforge.tess4j', name: 'tess4j', version: '3.4.8'
 }
 
 
